[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bullets/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.0223, 4.99078 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Bullet" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
rotation = 1.5708
scale = Vector2( 0.138468, 0.858447 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 1.5
one_shot = true
speed_scale = 7.88
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 1.0
scale_amount = 8.0
color = Color( 0, 0, 0, 1 )

[node name="FireParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.3
one_shot = true
explosiveness = 0.95
randomness = 1.0
lifetime_randomness = 0.39
local_coords = false
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
scale_amount = 3.0
scale_amount_curve = SubResource( 2 )
color = Color( 0, 0, 0, 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
